增加v3.0.0的更新日志

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,10 +1,21 @@
 
+## v3.0.0
+**完成时间**：<br>
+2019-03-20
+
+**主要内容**：<br>
+在v2.0.0的基础上，引入了Redis，以及对redis基本类型的读写操作。
+
+部署此版本需要**安装MySQL**和**Redis**。
+
 ## v2.0.0
 **完成时间**：<br>
 2019-01-06
 
 **主要内容**：<br>
-在v1.0.0的基础上，增加登录注册功能，用户信息保存到数据库中。
+在v1.0.0的基础上，增加登录注册功能，用户信息保存到MySQL数据库中。
+
+部署此版本需要**安装MySQL**，初始化MySQL库的脚本在https://github.com/wayss000/WebDemo/blob/master/webdemo-dao/src/main/resources/ddl/web_demo.sql。
 
 
 ## v1.0.0
