--- a/更新日志.md
+++ b/更新日志.md
@@ -15,7 +15,7 @@
 **主要内容**：<br>
 在v1.0.0的基础上，增加登录注册功能，用户信息保存到MySQL数据库中。
 
-部署此版本需要**安装MySQL**，初始化MySQL库的脚本在https://github.com/wayss000/WebDemo/blob/master/webdemo-dao/src/main/resources/ddl/web_demo.sql。
+部署此版本需要**安装MySQL**，初始化MySQL库的脚本在https://github.com/wayss000/WebDemo/blob/master/webdemo-dao/src/main/resources/ddl/web_demo.sql
 
 
 ## v1.0.0
